Replace Map.of with Collections.singletonMap